finita relazione per cheap e Triangular

--- a/relazioneAA/relazioneAA/res/sections/2approx.tex
+++ b/relazioneAA/relazioneAA/res/sections/2approx.tex
@@ -4,6 +4,6 @@ L'algoritmo crea il circuito per TSP attraverso la lista preordinata dei nodi de
 
 Dato $n=|V|$ e $m=|E|$, l'algoritmo \texttt{TriangleTSP}, dato utilizza \texttt{Kruskal}, ha una complessità \comp{m\log n}.
 
-L'algoritmo è 2-approssimazione per TSP, e per i grafi forniti ottiene risultati con un errore relativo al massimo del 45\%, impiegando un tempo di esecuzione di ~0.5 secondi. Dunque un algoritmo molto efficiente.
+L'algoritmo è 2-approssimazione per TSP, e per i grafi forniti ottiene risultati con un errore relativo al massimo del 45\%, impiegando un tempo di esecuzione di $\sim$0.5 secondi. Dunque un algoritmo molto efficiente.
 
 \image{1}{triangular}{Snipped del codice per \texttt{TriangleTSP}}
