--- a/relazioneAA/relazioneAA/res/sections/Heuristic.tex
+++ b/relazioneAA/relazioneAA/res/sections/Heuristic.tex
@@ -1,9 +1,9 @@
 \subsection{CheapestInsertion}
 
-L'algoritmo opera con l'assunzione che il grafo dato rispetti la disuguaglianza triangolare, inserendo iterativamente un nodo $k$ all'interno del circuito parziale per la soluzione a TSP per $n-2, n=|V|$ volte con $V$ l'insieme dei nodi del grafo. In particolare, dato $k \notin C \subseteq V$, con $C$ l'insieme dei nodi nel circuito parziale, e i nodi $u,v \in C$ \mbox{t.c.} $(u,v)\in P$, con $P$ l'insieme dei lati nel circuito parziale, $k$ viene scelto ed inserito nel circuito parziale tra i nodi $u$ e $v$ minimizzando: $w(u,k)+w(k,v)-w(u,v)$.
+L'algoritmo opera con l'assunzione che il grafo dato rispetti la disuguaglianza triangolare, inserendo iterativamente un nodo $k$ all'interno del circuito parziale per la soluzione a TSP per $n-2, n=|V|$ volte con $V$ l'insieme dei nodi del grafo. In particolare, dato $k \notin C \subseteq V$, con $C$ l'insieme dei nodi nel circuito parziale, e i nodi $u,v \in C$ \mbox{t.c.} $(u,v)\in P$, con $P$ l'insieme dei lati nel circuito parziale, $k$ viene scelto ed inserito nel circuito parziale tra i nodi $u$ e $v$ minimizzando: $w(u,k)+w(k,v)-w(u,v)$.\acapo
 
 La complessità dell'algoritmo si può calcolare analizzando i tre cicli \texttt{for} nell'algoritmo. Il ciclo più esterno viene eseguito $n-2$ volte. I due cicli più interni scorrono tutti i nodi $k \notin C$ e i lati $(u,v)\in P$. \'E possibile vedere come, ad ogni iterazione del ciclo \texttt{for} più esterno il numero di iterazioni dei due cicli più in interni, rispettivamente diminuiscano ed aumentino; in particolare il numero totale di iterazioni compiute dai tre cicli \texttt{for} è: $\sum_{i=2}^{n-1} (n-i)i=\frac{1}{6}(n^3-7n+6)$. Dunque l'algoritmo \texttt{CheapestInsertion} possiede una complessità di \comp{n^3}.
-Questo risultato risulta evidente analizzando i tempi di risoluzione dei vari grafi in Tabella~\ref{results}, il quale aumenta esponenzialmente all'aumentare della taglia del grafo, passando dai $\sim$0.004 s per un grafo da 100 nodi, a $\sim$7.5 s per un grafo da 1000 nodi.
+Questo risultato risulta evidente analizzando i tempi di risoluzione dei vari grafi in Tabella~\ref{results}, il quale aumenta esponenzialmente all'aumentare della taglia del grafo, passando dai $\sim$0.004 s per un grafo da 100 nodi, a $\sim$7.5 s per un grafo da 1000 nodi.\acapo
 
 L'algoritmo è 2-approssimato per TSP, anche se nei grafi forniti l'errore relativo massimo è del 22\%, dimostrando dunque di essere molto efficace.
 
