--- a/relazioneAA/relazioneAA/res/sections/introduzione.tex
+++ b/relazioneAA/relazioneAA/res/sections/introduzione.tex
@@ -35,7 +35,7 @@ Benché il codice sia stato adeguatamente commentato\footnote{come si può veder
 \subsection{Modello}
 Le componenti del modello, vale a dire le classi presenti all'interno del \texttt{package} chiamato \texttt{lab2.model}, comprendono tutte le strutture dati utilizzate nella risoluzione dei tre problemi assegnati. 
 \begin{itemize}
-	\item \texttt{AdjacentMatrix}: matrice di adiacenza usata per rappresentare i grafi, che si presenta come una normale matrice $n\times n$ simmetrica rispetto alla sua diagonale nulla\footnote{poiché non esistono cappi}. Gli algoritmi \texttt{HeldKarp}, \texttt{CheapestInsertion} e \texttt{TriangleTSP}, difatti, la trattano come tale. In verità è stata implementata come matrice triangolare inferiore, contenendo \texttt{n - 1} array di lunghezza crescente: questa scelta è stata fatta per risparmiare memoria, evitando di costruire una matrice quadrata. Tale classe presenta i metodi standard \texttt{get(u,v)} e \texttt{set(u,v)}, per ottenere ed impostare il peso del lato (u,v), ed un motodo \texttt{getMinAdjacentVertexWeightIndex(v)} per ottenere il lato con peso minore che ha per estremo il vertice \textit{v};
+	\item \label{adjmat}\texttt{AdjacentMatrix}: matrice di adiacenza usata per rappresentare i grafi, che si presenta come una normale matrice $n\times n$ simmetrica rispetto alla sua diagonale nulla\footnote{poiché non esistono cappi}. Gli algoritmi \texttt{HeldKarp}, \texttt{CheapestInsertion} e \texttt{TriangleTSP}, difatti, la trattano come tale. In verità è stata implementata come matrice triangolare inferiore, contenendo \texttt{n - 1} array di lunghezza crescente: questa scelta è stata fatta per risparmiare memoria, evitando di costruire una matrice quadrata. Tale classe presenta i metodi standard \texttt{get(u,v)} e \texttt{set(u,v)}, per ottenere ed impostare il peso del lato (u,v), ed un motodo \texttt{getMinAdjacentVertexWeightIndex(v)} per ottenere il lato con peso minore che ha per estremo il vertice \textit{v};
 	\item \texttt{Graph}: contiene esclusivamente una matrice di adiacenza, dato che tutte le informazioni necessarie dei nodi (i quali iniziano ad essere contati da 0) e dei lati possono essere ottenute analizzando la matrice di adiacenza;
 	\item \texttt{Node}: classe non utilizzata direttamente da \textit{Graph}, ma usata per costruire il MST (Minimum Spanning Tree) per l'algoritmo di 2-approssimazione richiesto. Essa dunque contiene solo l'\textit{ID}, un riferimento al nodo padre e una lista di riferimenti ai nodi figli;
 	\item \texttt{Edge}: come la classe \textit{Node}, anche \textit{Edge} viene utilizzata solo per costruire l'MST attraverso l'algoritmo \textit{Kruskal} implementato nello scorso assignment.
@@ -58,9 +58,9 @@ Le componenti del modello, vale a dire le classi presenti all'interno del \textt
 Il package \texttt{lab2.algorithm} contiene un'unica classe, \texttt{TSP}, che permette di risolvere il problema TSP utilizzando gli algoritmi \texttt{HeldKarp}, \texttt{CheapestInsertion} e \texttt{TrangularTSP}.
 \begin{itemize}
 	\item \texttt{HeldKarp}: funzione adibita all'inizializzazione e alla chiamata dell'algoritmo di Held e Karp. Si occupa di preparare l'ambiente necessario alla funzione \texttt{HeldKarpCore} e di catturare eventuali eccezioni lanciate dalla JVM\footnote{Java Virtual Machine} dovute alla mancanza di memoria (\texttt{OutOfMemoryException});
-	\item \texttt{HeldKarpCore}: funzione principale che implementa l'algoritmo di Held e Karp, del tutto coerente con lo pseudocodice visto a lezione. L'unica differenza è, naturalmente, la gestione degli \textit{interrupt}: se una certa istanza di TSP dovesse metterci più del tempo a disposizione $T$\footnote{come avviene nella maggior parte dei casi}, l'algoritmo interrompe immediatamente ogni ulteriore visita del grafo lasciando comunque l'opportunità di memorizzare i risultati finora calcolati. Questo comporta, a volte, un ritardo sui tempi di computazione consentiti: ciò non è visto dagli studenti come un problema poiché, di fatto, la computazione viene interrotta quindi non si è in presenza di alcun \textit{cheat}.
-	\item \texttt{CheapestInsertion}: l'algoritmo fa uso del metodo \texttt{getMinAdjacentVertexWeightIndex} per trovare il lato col peso minore che ha come estremo il nodo 0. Viene dunque creato un array di nodi che rappresenta il cammino per TSP ed un array coi nodi ancora non visitati. L'algoritmo dunque esegue un ciclo fino a quando il cammino non raggiunge lunghezza $n+1$ ed trova per ogni nodo non visitato e per ogni lato presente nel cammino trovato fino a quel momento, il minore \texttt{minCost}, indicando che nodo k non visitato deve essere inserito nel cammino e in che posizione. L'algoritmo ha complessità \comp{n^3};
-	\item \texttt{TrangularTSP}: l'algoritmo, attraverso l'algoritmo \textit{Kruskal}, ottiene prima il MST sotto forma di \textit{Node}, un nodo che possiede la lista di puntatori ai nodi figli, dopodiché ottiene la lista pre-oridinata dei nodi dell'albero ottenuto. L'algoritmo ha complessità \comp{m\lg n + n}.
+	\item \texttt{HeldKarpCore}: funzione principale che implementa l'algoritmo di Held e Karp, del tutto coerente con lo pseudocodice visto a lezione. L'unica differenza è, naturalmente, la gestione degli \textit{interrupt}: se una certa istanza di TSP dovesse metterci più del tempo a disposizione $T$\footnote{come avviene nella maggior parte dei casi}, l'algoritmo interrompe immediatamente ogni ulteriore visita del grafo lasciando comunque l'opportunità di memorizzare i risultati finora calcolati. Questo comporta, a volte, un ritardo sui tempi di computazione consentiti: ciò non è visto dagli studenti come un problema poiché, di fatto, la computazione viene interrotta quindi non si è in presenza di alcun \textit{cheat}. L'algoritmo ha complessità \comp{n^2\cdot 2^n}
+	\item \texttt{CheapestInsertion}: l'algoritmo fa uso del metodo \texttt{getMinAdjacentVertexWeightIndex} per trovare il lato col peso minore che ha come estremo il nodo 0. Viene creato un array di nodi che rappresenta il cammino per TSP ed un array coi nodi ancora non visitati. L'algoritmo dunque esegue un ciclo fino a quando il cammino non raggiunge lunghezza $n+1$ e trova per ogni nodo non visitato (e per ogni lato presente nel cammino trovato fino a quel momento) il minore \texttt{minCost}, indicando che il nodo $k$ non visitato deve essere inserito nel cammino e in quale posizione. L'algoritmo ha complessità \comp{n^3};
+	\item \texttt{TriangleTSP}: l'algoritmo, attraverso l'utilizzo di \texttt{Kruskal}, ottiene prima il MST sotto forma di \texttt{Node} (un nodo che possiede la lista di puntatori ai nodi figli), dopodiché ottiene la lista pre-oridinata dei nodi dell'albero ottenuto. L'algoritmo ha complessità \comp{m\log n + n}.
 \end{itemize}
 
 \subsection{Main}
